--- a/pkg/internal/apis/certmanager/validation/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/validation/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "//pkg/internal/apis/certmanager:go_default_library",
         "//pkg/internal/apis/certmanager/validation/util:go_default_library",
         "//pkg/internal/apis/meta:go_default_library",
+        "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_kr_pretty//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
