--- a/deploy/crds/crd-orders.v1beta1.yaml
+++ b/deploy/crds/crd-orders.v1beta1.yaml
@@ -82,6 +82,9 @@ spec:
                   type: array
                   items:
                     type: string
+                duration:
+                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
+                  type: string
                 ipAddresses:
                   description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
@@ -102,9 +105,6 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
-                notAfter:
-                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
-                  type: string
             status:
               type: object
               properties:
@@ -221,6 +221,9 @@ spec:
                   type: array
                   items:
                     type: string
+                duration:
+                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
+                  type: string
                 ipAddresses:
                   description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
@@ -241,9 +244,6 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
-                notAfter:
-                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
-                  type: string
             status:
               type: object
               properties:
@@ -357,6 +357,9 @@ spec:
                   type: array
                   items:
                     type: string
+                duration:
+                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
+                  type: string
                 ipAddresses:
                   description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
@@ -377,9 +380,6 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
-                notAfter:
-                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
-                  type: string
                 request:
                   description: Certificate signing request bytes in DER encoding. This will be used when finalizing the order. This field must be set on the order.
                   type: string
@@ -497,6 +497,9 @@ spec:
                   type: array
                   items:
                     type: string
+                duration:
+                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
+                  type: string
                 ipAddresses:
                   description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
@@ -517,9 +520,6 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
-                notAfter:
-                  description: Duration is the duration for the not after date for the requested certificate. this is set on order creation as pe the ACME spec.
-                  type: string
                 request:
                   description: Certificate signing request bytes in DER encoding. This will be used when finalizing the order. This field must be set on the order.
                   type: string
