--- a/deploy/charts/cert-manager/templates/webhook-psp.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-psp.yaml
@@ -27,7 +27,7 @@ spec:
   - 'projected'
   - 'secret'
   - 'downwardAPI'
-  hostNetwork: false
+  hostNetwork: {{ .Values.webhook.hostNetwork }}
   hostIPC: false
   hostPID: false
   runAsUser:
