--- a/test/e2e/framework/config/BUILD.bazel
+++ b/test/e2e/framework/config/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
     deps = [
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_client_go//tools/clientcmd:go_default_library",
+        "@io_k8s_kube_openapi//pkg/util/sets:go_default_library",
     ],
 )
 
