--- a/test/e2e/suite/issuers/venafi/addon/BUILD.bazel
+++ b/test/e2e/suite/issuers/venafi/addon/BUILD.bazel
@@ -16,6 +16,8 @@ go_library(
         "//test/e2e/framework/addon/base:go_default_library",
         "//test/e2e/framework/config:go_default_library",
         "//test/e2e/framework/util/errors:go_default_library",
+        "@com_github_venafi_vcert_v4//pkg/endpoint:go_default_library",
+        "@com_github_venafi_vcert_v4//pkg/venafi/tpp:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
