--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -22,8 +22,10 @@ go_library(
         "//pkg/controller/certificates/requestmanager:go_default_library",
         "//pkg/controller/certificates/trigger:go_default_library",
         "//pkg/controller/clusterissuers:go_default_library",
+        "//pkg/controller/clusterissuers/venafi:go_default_library",
         "//pkg/controller/ingress-shim:go_default_library",
         "//pkg/controller/issuers:go_default_library",
+        "//pkg/controller/issuers/venafi:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
     ],
