--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -34,6 +34,7 @@ filegroup(
         "//cmd/ctl/cmd:all-srcs",
         "//cmd/ctl/pkg/convert:all-srcs",
         "//cmd/ctl/pkg/create:all-srcs",
+        "//cmd/ctl/pkg/inspect:all-srcs",
         "//cmd/ctl/pkg/renew:all-srcs",
         "//cmd/ctl/pkg/status:all-srcs",
         "//cmd/ctl/pkg/util:all-srcs",
