--- a/cmd/ctl/pkg/inspect/BUILD.bazel
+++ b/cmd/ctl/pkg/inspect/BUILD.bazel
@@ -2,20 +2,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["cmd.go"],
-    importpath = "github.com/jetstack/cert-manager/cmd/ctl/cmd",
+    srcs = ["inspect.go"],
+    importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/inspect",
     visibility = ["//visibility:public"],
     deps = [
-        "//cmd/ctl/pkg/convert:go_default_library",
-        "//cmd/ctl/pkg/create:go_default_library",
-        "//cmd/ctl/pkg/inspect:go_default_library",
-        "//cmd/ctl/pkg/renew:go_default_library",
-        "//cmd/ctl/pkg/status:go_default_library",
-        "//cmd/ctl/pkg/version:go_default_library",
+        "//cmd/ctl/pkg/inspect/secret:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
-        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
-        "@io_k8s_klog_v2//:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
     ],
 )
@@ -29,7 +22,10 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//cmd/ctl/pkg/inspect/secret:all-srcs",
+    ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
